fix: add extra padding to make table visible

--- a/src/react/import-app/match-columns/styles.css
+++ b/src/react/import-app/match-columns/styles.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 250px;
     overflow: scroll;
-    padding-right: 2em;
+    padding-right: 3em;
 }
 
 .dataloom-match-columns table {
